Bug 425285 - No display of foreign key constraints when opening a file
Summary: No display of foreign key constraints when opening a file
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.31.3 (KDE releases 20.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-13 10:38 UTC by Ralf Habacker
Modified: 2021-02-11 23:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.32.1 (KDE releases 20.08.1)
Sentry Crash Report:


Attachments
xmi test file (22.67 KB, application/x-uml)
2020-08-13 10:38 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-08-13 10:38:11 UTC
Created attachment 130842 [details]
xmi test file

STEPS TO REPRODUCE
1. start umbrello
2. open appended file

OBSERVED RESULT
The foreign key constraint is not shown in the diagram

EXPECTED RESULT
The foreign key constraint should be displayed in the diagram

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.1
KDE Frameworks Version: 5.55.0
Qt Version: 5.97

ADDITIONAL INFORMATION
This seems to be a QT5/KF5 specific problem, as it does not occur in the KDE4 variant.
Comment 1 Bug Janitor Service 2020-08-13 11:07:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/umbrello/-/merge_requests/11
Comment 2 Ralf Habacker 2020-08-13 11:13:53 UTC
Git commit 61536141ba6247ce05f7ce85fd44584e405439bc by Ralf Habacker.
Committed on 13/08/2020 at 11:11.
Pushed by habacker into branch 'release/20.08'.

Fix 'No display of foreign key constraints when opening a file'

Using obj->isUMLClassifier() excluded any other object types, which was
introduced with commit ed05f534b.

For better readability, the ot_Entity has been implemented separatly.
FIXED-IN:2.32.01 (KDE release 20.08.1)

M  +10   -3    umbrello/model_utils.cpp

https://invent.kde.org/sdk/umbrello/commit/61536141ba6247ce05f7ce85fd44584e405439bc