Fix 'No display of foreign key constraints when opening a file'

Using obj->isUMLClassifier() excluded any other object types, which was
introduced with commit ed05f534b.

For better readability, the ot_Entity has been implemented separatly.

BUG:425285
FIXED-IN:2.32.01 (KDE release 20.08.1)